--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -17,9 +17,10 @@
 
 <resources>
     <color name="photo_placeholder">#ccc</color>
-
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <color name="theme_primary">#00e5ff</color>
+    <color name="theme_primary_dark">#00b2cc</color>
+    <color name="theme_accent">#f9991b</color>
+    <color name="ltgray">#000000</color>
+    <color name="bodyTextcolor">#fff</color>
+    <color name="scrimColor">#03ca88</color>
 </resources>
