--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="fab_elevation">2dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
-
+    <dimen name="bodyTextElevation">0dp</dimen>
+    <dimen name="metabarMargingButtom">16dp</dimen>
+    <dimen name="appBarPhotoHeight">300dp</dimen>
 </resources>
